# LOLcord

./: .gitignore  Cargo.toml  PLAN.md  README.md  SCREENSHARE_PLAN.md  test_iced.rs
client/: Cargo.toml
client/src/: audio.rs  crypto.rs  devices.rs  hotkeys.rs  jitter.rs  main.rs  main_simple.rs  net.rs  screen_capture.rs  screen_decode.rs  settings.rs  tray.rs  ui.rs  ui.rs.bak  ui_simple.rs  voice.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  room.rs
shared/: Cargo.toml
shared/src/: lib.rs
