[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eframe = "0.31"
egui = "0.31"
cpal = "0.15"
audiopus = "0.3.0-rc.0"
ringbuf = "0.4"
device_query = "2"
tray-icon = "0.21.3"
nnnoiseless = "0.5"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
